Ensure admin year chooser is shown correctly on small screens

--- a/templates/static/admin.css
+++ b/templates/static/admin.css
@@ -41,6 +41,7 @@ header img.padlock {
 }
 
 header select {
+    flex: 0 0 auto;
     box-sizing: border-box;
     -webkit-appearance: none;
     -moz-appearance: none;
